<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.digipeople.locotech.master.ui.activity.urgent.UrgentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ru.digipeople.ui.view.HorizontalSortView
                android:id="@+id/tab_eq_status_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/appWhite"
                android:paddingTop="16dp"
                custom:sortTitle="@string/sections_status_all" />

            <ru.digipeople.ui.view.HorizontalSortView
                android:id="@+id/tab_eq_status_waiting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/appWhite"
                android:paddingTop="16dp"
                custom:drawableStart="@drawable/yellow_dot"
                custom:sortTitle="@string/sections_status_waiting" />

            <ru.digipeople.ui.view.HorizontalSortView
                android:id="@+id/tab_eq_status_in_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/appWhite"
                android:paddingTop="16dp"
                custom:drawableStart="@drawable/green_dot"
                custom:sortTitle="@string/sections_status_in_service" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_locomotive_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp" />

    </LinearLayout>

    <include layout="@layout/include_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>