<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/include_no_data"
            tools:visibility="gone" />

        <HorizontalScrollView
            android:id="@+id/tabs_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fillViewport="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/appWhite">

                <ru.digipeople.ui.view.HorizontalSortView
                    android:id="@+id/tab_eq_status_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/appWhite"
                    android:minWidth="70dp"
                    android:paddingTop="16dp"
                    custom:sortTitle="@string/sections_status_all" />

                <ru.digipeople.ui.view.HorizontalSortView
                    android:id="@+id/tab_eq_status_waiting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/appWhite"
                    android:minWidth="70dp"
                    android:paddingTop="16dp"
                    custom:drawableStart="@drawable/yellow_dot"
                    custom:sortTitle="@string/sections_status_waiting" />

                <ru.digipeople.ui.view.HorizontalSortView
                    android:id="@+id/tab_eq_status_in_service"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/appWhite"
                    android:minWidth="70dp"
                    android:paddingTop="16dp"
                    custom:drawableStart="@drawable/green_dot"
                    custom:sortTitle="@string/sections_status_in_service" />

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <include layout="@layout/include_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>